* Make the Fuse.List methods intentionally generic so they don't require that their `this` value be an Array object. [jddalton]

* unit test: Correct a return statement in the DOM unit test `setup` method. [Ihab Awad, Tobie Langel]

* Optimize Element#isFragment to use Element#compareDocumentPosition if available. [Diego Perini, jddalton]

* unit test: Add tests for table elements to the Element#isVisible unit tests. [jddalton]

* Optimize Element._getContentFromAnonymousElement() by replacing a Fuse.Number#times call with a while-loop. [jddalton, kangax]

* Optimize NWMatcher by passing a Fuse.List to its select() method and update other engines. [Diego Perini, jddalton]

* Ensure pollers used in the dom-loaded solution stop polling when not needed and stop the IE doScroll poller when doScroll() is successful or document readyState is `complete`. [Diego Perini, jddalton]

* Make Element#isVisible() return true when an element has height or width and is not display="none". [jQuery Trac #4512] [Brandon Aaron, jddalton, qiuzj, vbabiy86]

* Allow Fuse.Function methods to pass an array, ['methodName', context], as the `fn` argument to help methods work with lazy loaded methods. [jddalton]

* Ensure Fuse.Object.inspect() avoids treating DOM nodes as generic Object objects. [jddalton]

* unit test: Fix Ajax reference in the emulated DOMParser object. [jddalton]

* Make Fuse.RegExp() calls as a function instead of with a new expression. [jddalton]

* Escape a forward slash in the regexp pattern of Fuse.Object.isSameOrigin(). [Diego Perini, jddalton]

* Remove unneeded Chrome fix for Fuse.String#replace as well as the STRING_REPLACE_BUGGY_WITH_GLOBAL_FLAG_AND_EMPTY_PATTERN feature detection. [jddalton]

* Optimize Fuse.String#replace and ensure it follows specification with regard to setting the pattern.lastIndex. [jddalton, Samuel Lebeau]

* Remove unneeded IE8 RC1 fork in Fuse.List.fromNodeList(). [Diego Perini]
