@@ -1,3 +1,5 @@
+* Allow objects to execute their own `clone` method when passed to Fuse.Object.clone(). [jddalton]
+
 * Make the Fuse.List methods intentionally generic so they don't require that their `this` value be an Array object. [jddalton]
 
 * unit test: Correct a return statement in the DOM unit test `setup` method. [Ihab Awad, Tobie Langel]
